Correcciones y add chat en index

--- a/registro-usuarios/src/main/resources/static/FaQ.html
+++ b/registro-usuarios/src/main/resources/static/FaQ.html
@@ -49,10 +49,8 @@
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Inicio</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Perfil</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Tabla</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Registrarse</span></a></li>
-                </ul>
+                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
+                    </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn border-0 rounded-circle" id="sidebarToggle" type="button"></button></div>
             </div>
         </nav>
@@ -342,7 +340,7 @@
                                             </h2>
                                             <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
-                                                    La tabla de alumnos muestra información como el nombre, apellidos, curso, y calificaciones.
+                                                    La tabla de alumnos muestra información como el nombre, apellidos, curso, y role.
                                                 </div>
                                             </div>
                                         </div>
