--- a/registro-usuarios/src/main/resources/static/register.html
+++ b/registro-usuarios/src/main/resources/static/register.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="text-center">
                   <a class="small" href="login.html"
-                    >Ya tiene una cuenta? Inicie sesión!</a
+                    >¿Ya tiene cuenta? ¡Inicie sesión!</a
                   >
                 </div>
               </div>
