--- a/registro-usuarios/src/main/resources/static/Chat.html
+++ b/registro-usuarios/src/main/resources/static/Chat.html
@@ -101,9 +101,7 @@
                 <ul class="navbar-nav text-light">
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Inicio</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Perfil</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Tabla</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Registrarse</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
                     <hr class="sidebar-divider my-0">
                     <li class="nav-item"><span class="nav-link text-light"><i class="fas fa-comments"></i><span>&nbsp;Chats</span></span></li>
                 </ul>
