--- a/registro-usuarios/src/main/resources/static/login.html
+++ b/registro-usuarios/src/main/resources/static/login.html
@@ -60,14 +60,14 @@
                                                 <div class="form-check"><input type="checkbox" class="form-check-input custom-control-input" id="formCheck-1"><label class="form-label form-check-label custom-control-label" for="formCheck-1">Recuerdame</label></div>
                                             </div>
                                         </div>
-                                        <button class="btn btn-primary d-block btn-user w-100" type="submit">Iniciar Sesion</button>
+                                        <button class="btn btn-primary d-block btn-user w-100" type="submit">Iniciar Sesión</button>
                                         <hr>
                                     </form>
                                     <div class="text-center" style="padding-top: 15px">
                                         <p id="error" class="error-message"></p>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Todavia no tiene cuenta? Registrese!</a>
+                                        <a class="small" href="register.html">¿Todavia no tiene cuenta? ¡Regístrese!</a>
                                     </div>
                                 </div>
                             </div>
