--- a/registro-usuarios/src/main/resources/static/profile.html
+++ b/registro-usuarios/src/main/resources/static/profile.html
@@ -49,8 +49,10 @@
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Inicio</span></a></li>
-                    <li class="nav-item" sec:authorize="hasRole('ROLE_Director')"><a class="nav-link active" href="profile.html"><i class="fas fa-user"></i><span>Perfil</span></a></li>
-                    <li class="nav-item" sec:authorize="hasRole('ROLE_Director')"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="profile.html"><i class="fas fa-user"></i><span>Perfil</span></a></li>
+                    <li class="nav-item" id="tableNavItem"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="FaQ.html"><i class="fas fa-user-circle"></i><span>FaQ</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Chat.html"><i class="fas fa-user-circle"></i><span>Chat</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn border-0 rounded-circle" id="sidebarToggle" type="button"></button></div>
             </div>
@@ -151,11 +153,7 @@
                                         <img class="border rounded-circle img-profile" src="assets/img/logoEduca.jpg" id="userImage">
                                     </a>
                                     <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
-                                        <a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a>
-                                        <a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a>
-                                        <a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
-                                        <div class="dropdown-divider" onclick="logout()"></div>
-                                        <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
+                                        <a class="dropdown-item" href="#" onclick="logout()"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
                                 </div>
                             </li>
@@ -271,6 +269,23 @@
             }
         });
 
+        function showOrHideNavItems(role) {
+            const tableNavItem = document.getElementById('tableNavItem');
+            const tableNavItem2 = document.getElementById('tableNavItem2');
+            const alertmsgbutt = document.getElementById('alertmsg');
+            const alertgenbutt = document.getElementById('alertgen');
+            if (role === 'Director') {
+                tableNavItem.style.display = 'block';
+            } else if (role === 'Alumno') {
+                tableNavItem.style.display = 'none';
+            } else if (role === null) {
+                alertmsgbutt.style.display = 'none';
+                alertgenbutt.style.display = 'none';
+                tableNavItem.style.display = 'none';
+                tableNavItem2.style.display = 'none';
+            }
+        }
+
         function fetchUserData(token) {
             const userId = getUserIdFromToken(token);
             console.log("UserID from token:", userId); // Debug: Verifica que el ID se extrae correctamente
@@ -309,6 +324,8 @@
                         document.getElementById('address').textContent = data.address || 'No disponible';
                         // Imagen
                         document.getElementById('profileImage').src = data.imageUrl || 'assets/img/default.png';
+
+                        showOrHideNavItems(data.roleName);
                     }
                 })
                 .catch(error => {
