--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -408,7 +408,7 @@
             if (token) {
                 fetchUserData(token);
             } else {
-           //     redirectToLogin();
+                 redirectToLogin();
             }
 
             // Cargar datos de transporte al abrir el contenido
